--- a/AnperoFrontend/Views/Home/Index.cshtml
+++ b/AnperoFrontend/Views/Home/Index.cshtml
@@ -221,7 +221,7 @@
                                                                 <a title="Chi tiết sản phẩm" class="search" href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)"></a>
                                                             </div>
                                                             <div class="add-to-cart">
-                                                                <a title="Add to Cart" href="javascript:Cart.addProduct(@item.Id,@item.Price,'@item.Images','@item.PrName')">Chọn vào giỏ hàng</a>
+                                                                <a title="Add to Cart" href="javascript:Cart.addProduct(@item.Id,@item.Price,'@item.Images','@item.PrName')">thêm vào giỏ hàng</a>
                                                             </div>
                                                             <div class="group-price">
                                                                 <span class="product-new">Mới</span>
