--- a/HR_Service_Frontend_01/Views/Home/Index.cshtml
+++ b/HR_Service_Frontend_01/Views/Home/Index.cshtml
@@ -174,7 +174,7 @@
                                                                     <span class="product-new">Mới</span>
                                                                     @if (item.IsSale)
                                                                     {
-                                                                    <span class="product-sale">@Anpero.StringHelpper.ConVertToMoneyFormatInt((item.SalePrice - item.Price).ToString())</span>
+                                                                    <span class="product-sale">@Anpero.StringHelpper.ConVertToMoneyFormatInt((item.SalePrice - item.Price).ToString()) đ</span>
                                                                     }
                                                                 </div>
                                                             </div>
@@ -227,7 +227,7 @@
                                                                 <span class="product-new">Mới</span>
                                                                 @if (item.IsSale)
                                                                 {
-                                                                    <span class="product-sale">@Anpero.StringHelpper.ConVertToMoneyFormatInt((item.SalePrice - item.Price).ToString())</span>
+                                                                    <span class="product-sale">@Anpero.StringHelpper.ConVertToMoneyFormatInt((item.SalePrice - item.Price).ToString()) đ</span>
                                                                 }
                                                             </div>
                                                         </div>
@@ -282,7 +282,7 @@
                                                                     <span class="product-new">Mới</span>
                                                                     @if (item.IsSale)
                                                                     {
-                                                                        <span class="product-sale">@Anpero.StringHelpper.ConVertToMoneyFormatInt((item.SalePrice - item.Price).ToString())</span>
+                                                                        <span class="product-sale">@Anpero.StringHelpper.ConVertToMoneyFormatInt((item.SalePrice - item.Price).ToString()) đ</span>
                                                                     }
                                                                 </div>
                                                             </div>
