--- a/HR_Service_Frontend_01/Views/Product/Checkout.cshtml
+++ b/HR_Service_Frontend_01/Views/Product/Checkout.cshtml
@@ -106,13 +106,19 @@
         </div>
         <div class="page-content checkout-page" id="cartContent2" style="display:none;"></div>
     </div>
+    <div id='ajax_loader' style="position: fixed; left: 45%; top: 50%; display: none;">
+        <img src="~/assets/images/loading.gif" />
+    </div>
 </div>
+
 @section scripts{
     <script src="~/Scripts/Bootrap.notify.js"></script>
     <script src="https://www.google.com/recaptcha/api.js"></script>
     <script>
         var googleCatcha;
         $(window).load(function () {
+            var width = $(window).width();
+            $("#ajax_loader").css("left", ((width/2)-100)+"px")
             Cart.bindCartTable();
             $("input[name=radio_3]").click(function () {
                 Cart.bindCartTable();
